--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="id">
 <head> 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsivitas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Sourdough</title>
     <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> 
     <link rel="icon" try="gambar/png" href="Logo.png">
 </head>
 <body>
