--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <h2>About Us</h2>
         <div>
             <p>
-                <h3>Di Richo’s Bread, kami percaya bahwa roti bukan sekadar makanan—roti adalah pengalaman. Kami menghadirkan roti sourdough alami yang dibuat dengan proses fermentasi alami tanpa bahan kimia, menggunakan ragi liar dari udara dan bahan-bahan pilihan</h3>
+                <h3>Di Richo’s Bread, kami percaya bahwa roti bukan sekadar makanan—roti adalah pengalaman. Kami menghadirkan roti sourdough alami yang dibuat dengan proses fermentasi alami tanpa bahan kimia, menggunakan ragi liar dari udara dan bahan-bahan pilihan
                 Bergabunglah bersama kami dalam menikmati roti yang alami, sehat, dan penuh cinta, karena kami percaya:
-                 “Nature’s gift in every bite.”
+                 “Nature’s gift in every bite.”</h3>
              </p>
         </div>
     </section>
