--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="about" class="about">
          <h2>About Us</h2>
         <div>
-                <p>Di Richo’s Bread, kami percaya bahwa roti bukan sekadar makanan—roti adalah pengalaman.</p>
+                <p>Di Richo’s Bread, kami percaya bahwa roti bukan sekadar makanan roti adalah pengalaman.</p>
                 <p>Kami menghadirkan roti sourdough alami yang dibuat dengan proses fermentasi alami tanpa bahan kimia.</p>
                 <p>“Nature’s gift in every bite.”</p>
         </div>
